; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-sprintf/src/extr_sprintf.c_check_pos_arg.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-sprintf/src/extr_sprintf.c_check_pos_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_ARGUMENT_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"numbered(%i) after unnumbered(%d)\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"numbered(%i) after named\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"invalid index - %i$\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @check_pos_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_pos_arg(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sgt i32 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %3
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @E_ARGUMENT_ERROR, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 (i32*, i32, i8*, i32, ...) @mrb_raisef(i32* %10, i32 %11, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %9, %3
  %16 = load i32, i32* %5, align 4
  %17 = icmp eq i32 %16, -2
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @E_ARGUMENT_ERROR, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 (i32*, i32, i8*, i32, ...) @mrb_raisef(i32* %19, i32 %20, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %18, %15
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 1
  br i1 %25, label %26, label %31

26:                                               ; preds = %23
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* @E_ARGUMENT_ERROR, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i32 (i32*, i32, i8*, i32, ...) @mrb_raisef(i32* %27, i32 %28, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i32 %29)
  br label %31

31:                                               ; preds = %26, %23
  ret void
}

declare dso_local i32 @mrb_raisef(i32*, i32, i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
